--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "chart.js": "^3.7.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "socket.io": "^4.4.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
